--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Microservice NodeJs",
+    "name": "microservice-nodejs",
     "version": "1.0.0",
-    "description": "",
+    "description": "Sample NodeJs microservice",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error no test specified\" && exit 1"
